# StrataSlims

./: .gitignore  LICENSE  README.md  booststyle.py  bot.py  config.py  flaskserver.py  gen_music.py  main.py  mcp.json  mcp_server.py  mock.py  mock_flaskserver.py  mockapi.py  mockinteraction.py  musicparser.py  notify_preemption.py  post_songs.py  pyproject.toml  requirements.txt  run_with_update.sh  strataslims.conf  sunoapi.py  sunoresults.py  test_setup.py
.github/: copilot-instructions.md
bot/: admin.py  booststyle.py  bug_report.py  gen_music.py  logging.py  musicparser.py  run.py  sunoapi.py  sunoresults.py
mcp/: mcp_server.py  test_setup.py
server/: install_systemd.sh
server/systemd/: strataslims.service
systemd/: strataslims-control.service  strataslims.service
