[project]
name = "strataslims"
version = "0.1.0"
description = "Discord bot for music generation using Suno AI with MCP (Model Context Protocol) support"
readme = "README.md"
authors = [{name = "StrataSlims Team"}]
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["discord", "bot", "music", "ai", "suno", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.12.15",
    "aiosignal>=1.4.0",
    "async-timeout>=5.0.1",
    "attrs>=25.3.0",
    "certifi>=2025.8.3",
    "charset-normalizer>=3.4.3",
    "discord-py>=2.6.3",
    "frozenlist>=1.7.0",
    "idna>=3.10",
    "multidict>=6.6.4",
    "propcache>=0.3.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "typing-extensions>=4.15.0",
    "urllib3>=2.5.0",
    "yarl>=1.20.1",
]

[project.urls]
Homepage = "https://github.com/Kor-ok/StrataSlims"
Repository = "https://github.com/Kor-ok/StrataSlims"
Issues = "https://github.com/Kor-ok/StrataSlims/issues"

[project.scripts]
strataslims = "main:main"
strataslims-mcp = "mcp_server:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
